--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,7 @@
 
 
 
+
         <!-- MyBatis-Plus 依赖 -->
         <dependency>
             <groupId>com.baomidou</groupId>
@@ -70,6 +71,13 @@
             <artifactId>IKExpression</artifactId>
             <version>2.1.0</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>transmittable-thread-local</artifactId>
+            <version>2.14.3</version> <!-- 最新稳定版，放心用 -->
+        </dependency>
+
 
         <dependency>
             <groupId>org.projectlombok</groupId>
